WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.vb


  Public Declare Unicode Function BlockAddBlockRefIDH Lib "Litecad.dll" Alias "lcBlockAddBlockRefIDH" (ByVal hBlock As Integer, ByVal szIdRefBlock As String, ByVal X As Double, ByVal Y As Double, ByVal Scal As Double, ByVal Angle As Double) As Integer

  Public Declare Function BlockAddImageRef Lib "Litecad.dll" Alias "lcBlockAddImageRef" (ByVal hBlock As Integer, ByVal hImage As Integer, ByVal X As Double, ByVal Y As Double, ByVal Width As Double, ByVal Height As Double, ByVal bBorder As Integer) As Integer

  Public Declare Unicode Function BlockAddEcw Lib "Litecad.dll" Alias "lcBlockAddEcw" (ByVal hBlock As Integer, ByVal szFileName As String) As Integer

  Public Declare Unicode Function BlockAddAttDef Lib "Litecad.dll" Alias "lcBlockAddAttDef" (ByVal hBlock As Integer, ByVal Mode As Integer, ByVal szTag As String, ByVal szPrompt As String, ByVal szDefVal As String, ByVal X As Double, ByVal Y As Double, ByVal Align As Integer, ByVal H As Double, ByVal WScale As Double, ByVal RotAngle As Double, ByVal Oblique As Double) As Integer

  Public Declare Unicode Function BlockAddHatch Lib "Litecad.dll" Alias "lcBlockAddHatch" (ByVal hBlock As Integer, ByVal szFileName As String, ByVal szPatName As String, ByVal Scal As Double, ByVal Angle As Double) As Integer

  Public Declare Function BlockAddViewport Lib "Litecad.dll" Alias "lcBlockAddViewport" (ByVal hBlock As Integer, ByVal Lef As Double, ByVal Bot As Double, ByVal Width As Double, ByVal Height As Double, ByVal DrwPntX As Double, ByVal DrwPntY As Double, ByVal DrwScale As Double, ByVal DrwAngle As Double) As Integer

  Public Declare Function BlockAddFace Lib "Litecad.dll" Alias "lcBlockAddFace" (ByVal hBlock As Integer, ByVal Flags As Integer, ByVal x0 As Double, ByVal y0 As Double, ByVal z0 As Double, ByVal x1 As Double, ByVal y1 As Double, ByVal z1 As Double, ByVal x2 As Double, ByVal y2 As Double, ByVal z2 As Double) As Integer

  Public Declare Function BlockAddFace4 Lib "Litecad.dll" Alias "lcBlockAddFace4" (ByVal hBlock As Integer, ByVal Flags As Integer, ByVal x0 As Double, ByVal y0 As Double, ByVal z0 As Double, ByVal x1 As Double, ByVal y1 As Double, ByVal z1 As Double, ByVal x2 As Double, ByVal y2 As Double, ByVal z2 As Double, ByVal x3 As Double, ByVal y3 As Double, ByVal z3 As Double) As Integer

  Public Declare Unicode Function BlockAddLeader Lib "Litecad.dll" Alias "lcBlockAddLeader" (ByVal hBlock As Integer, ByVal szText As String, ByVal Xt As Double, ByVal Yt As Double, ByVal LandDist As Double, ByVal Xa As Double, ByVal Ya As Double, ByVal Attach As Integer, ByVal Align As Integer) As Integer

  Public Declare Unicode Function BlockAddDimRot Lib "Litecad.dll" Alias "lcBlockAddDimRot" (ByVal hBlock As Integer, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double, ByVal Xt As Double, ByVal Yt As Double, ByVal Angle As Double, ByVal szText As String) As Integer

  Public Declare Unicode Function BlockAddDimHor Lib "Litecad.dll" Alias "lcBlockAddDimHor" (ByVal hBlock As Integer, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double, ByVal Yt As Double, ByVal szText As String) As Integer

  Public Declare Unicode Function BlockAddDimVer Lib "Litecad.dll" Alias "lcBlockAddDimVer" (ByVal hBlock As Integer, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double, ByVal Xt As Double, ByVal szText As String) As Integer

  Public Declare Unicode Function BlockAddDimAli Lib "Litecad.dll" Alias "lcBlockAddDimAli" (ByVal hBlock As Integer, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double, ByVal Xt As Double, ByVal Yt As Double, ByVal szText As String) As Integer

  Public Declare Unicode Function BlockAddDimAli2 Lib "Litecad.dll" Alias "lcBlockAddDimAli2" (ByVal hBlock As Integer, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double, ByVal Dt As Double, ByVal szText As String) As Integer

  Public Declare Unicode Function BlockAddDimOrd Lib "Litecad.dll" Alias "lcBlockAddDimOrd" (ByVal hBlock As Integer, ByVal Xd As Double, ByVal Yd As Double, ByVal Xt As Double, ByVal Yt As Double, ByVal bX As Integer, ByVal szText As String) As Integer

  Public Declare Unicode Function BlockAddDimRad Lib "Litecad.dll" Alias "lcBlockAddDimRad" (ByVal hBlock As Integer, ByVal Xc As Double, ByVal Yc As Double, ByVal Xr As Double, ByVal Yr As Double, ByVal Xt As Double, ByVal Yt As Double, ByVal szText As String) As Integer

  Public Declare Unicode Function BlockAddDimRad2 Lib "Litecad.dll" Alias "lcBlockAddDimRad2" (ByVal hBlock As Integer, ByVal Xc As Double, ByVal Yc As Double, ByVal R As Double, ByVal Angle As Double, ByVal TextOff As Double, ByVal szText As String) As Integer

  Public Declare Unicode Function BlockAddDimDia Lib "Litecad.dll" Alias "lcBlockAddDimDia" (ByVal hBlock As Integer, ByVal Xc As Double, ByVal Yc As Double, ByVal Xr As Double, ByVal Yr As Double, ByVal Xt As Double, ByVal Yt As Double, ByVal szText As String) As Integer

  Public Declare Unicode Function BlockAddDimDia2 Lib "Litecad.dll" Alias "lcBlockAddDimDia2" (ByVal hBlock As Integer, ByVal Xc As Double, ByVal Yc As Double, ByVal R As Double, ByVal Angle As Double, ByVal TextOff As Double, ByVal szText As String) As Integer

  Public Declare Unicode Function BlockAddDimAng Lib "Litecad.dll" Alias "lcBlockAddDimAng" (ByVal hBlock As Integer, ByVal Xc As Double, ByVal Yc As Double, ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal Xa As Double, ByVal Ya As Double, ByVal TextPos As Double, ByVal szText As String) As Integer

  Public Declare Unicode Function BlockAddDimAng2 Lib "Litecad.dll" Alias "lcBlockAddDimAng2" (ByVal hBlock As Integer, ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal X3 As Double, ByVal Y3 As Double, ByVal X4 As Double, ByVal Y4 As Double, ByVal Xa As Double, ByVal Ya As Double, ByVal TextPos As Double, ByVal szText As String) As Integer

  Public Declare Function BlockAddRPlan Lib "Litecad.dll" Alias "lcBlockAddRPlan" (ByVal hBlock As Integer) As Integer

  Public Declare Function BlockAddBezier Lib "Litecad.dll" Alias "lcBlockAddBezier" (ByVal hBlock As Integer, ByVal X1 As Double, ByVal Y1 As Double, ByVal Angle1 As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal Angle2 As Double) As Integer

  Public Declare Function BlockAddTIN Lib "Litecad.dll" Alias "lcBlockAddTIN" (ByVal hBlock As Integer) As Integer

  Public Declare Function BlockAddClone Lib "Litecad.dll" Alias "lcBlockAddClone" (ByVal hBlock As Integer, ByVal hEnt As Integer) As Integer

  Public Declare Function BlockGetFirstEnt Lib "Litecad.dll" Alias "lcBlockGetFirstEnt" (ByVal hBlock As Integer) As Integer

  Public Declare Function BlockGetNextEnt Lib "Litecad.dll" Alias "lcBlockGetNextEnt" (ByVal hBlock As Integer, ByVal hEnt As Integer) As Integer

  Public Declare Function BlockGetLastEnt Lib "Litecad.dll" Alias "lcBlockGetLastEnt" (ByVal hBlock As Integer) As Integer

  Public Declare Function BlockGetPrevEnt Lib "Litecad.dll" Alias "lcBlockGetPrevEnt" (ByVal hBlock As Integer, ByVal hEnt As Integer) As Integer

  Public Declare Function BlockGetEntByID Lib "Litecad.dll" Alias "lcBlockGetEntByID" (ByVal hBlock As Integer, ByVal Id As Integer) As Integer

  Public Declare Unicode Function BlockGetEntByIDH Lib "Litecad.dll" Alias "lcBlockGetEntByIDH" (ByVal hBlock As Integer, ByVal szId As String) As Integer

  Public Declare Function BlockGetEntByKey Lib "Litecad.dll" Alias "lcBlockGetEntByKey" (ByVal hBlock As Integer, ByVal Key As Integer) As Integer

  Public Declare Function BlockGetTIN Lib "Litecad.dll" Alias "lcBlockGetTIN" (ByVal hBlock As Integer, ByVal Index As Integer) As Integer

  Public Declare Function BlockUnselect Lib "Litecad.dll" Alias "lcBlockUnselect" (ByVal hBlock As Integer) As Integer

  Public Declare Function BlockSelectEnt Lib "Litecad.dll" Alias "lcBlockSelectEnt" (ByVal hBlock As Integer, ByVal hEntity As Integer, ByVal bSelect As Integer) As Integer

  Public Declare Function BlockSelErase Lib "Litecad.dll" Alias "lcBlockSelErase" (ByVal hBlock As Integer) As Integer

  Public Declare Function BlockSelMove Lib "Litecad.dll" Alias "lcBlockSelMove" (ByVal hBlock As Integer, ByVal dX As Double, ByVal dY As Double, ByVal bCopy As Integer, ByVal bNewSelect As Integer) As Integer

  Public Declare Function BlockSelScale Lib "Litecad.dll" Alias "lcBlockSelScale" (ByVal hBlock As Integer, ByVal X0 As Double, ByVal Y0 As Double, ByVal Scal As Double, ByVal bCopy As Integer, ByVal bNewSelect As Integer) As Integer

  Public Declare Function BlockSelRotate Lib "Litecad.dll" Alias "lcBlockSelRotate" (ByVal hBlock As Integer, ByVal X0 As Double, ByVal Y0 As Double, ByVal Angle As Double, ByVal bCopy As Integer, ByVal bNewSelect As Integer) As Integer

  Public Declare Function BlockSelMirror Lib "Litecad.dll" Alias "lcBlockSelMirror" (ByVal hBlock As Integer, ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal bCopy As Integer, ByVal bNewSelect As Integer) As Integer

  Public Declare Function BlockSelExplode Lib "Litecad.dll" Alias "lcBlockSelExplode" (ByVal hBlock As Integer) As Integer

  Public Declare Function BlockSelJoin Lib "Litecad.dll" Alias "lcBlockSelJoin" (ByVal hBlock As Integer, ByVal Delta As Double) As Integer

  Public Declare Function BlockGetFirstSel Lib "Litecad.dll" Alias "lcBlockGetFirstSel" (ByVal hBlock As Integer) As Integer

  Public Declare Function BlockGetNextSel Lib "Litecad.dll" Alias "lcBlockGetNextSel" (ByVal hBlock As Integer) As Integer

  Public Declare Function EntErase Lib "Litecad.dll" Alias "lcEntErase" (ByVal hEnt As Integer, ByVal bErase As Integer) As Integer

  Public Declare Function EntMove Lib "Litecad.dll" Alias "lcEntMove" (ByVal hEnt As Integer, ByVal dX As Double, ByVal dY As Double) As Integer

  Public Declare Function EntScale Lib "Litecad.dll" Alias "lcEntScale" (ByVal hEnt As Integer, ByVal X0 As Double, ByVal Y0 As Double, ByVal Scal As Double) As Integer

  Public Declare Function EntRotate Lib "Litecad.dll" Alias "lcEntRotate" (ByVal hEnt As Integer, ByVal X0 As Double, ByVal Y0 As Double, ByVal Angle As Double) As Integer

  Public Declare Function EntMirror Lib "Litecad.dll" Alias "lcEntMirror" (ByVal hEnt As Integer, ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double) As Integer

  Public Declare Function EntExplode Lib "Litecad.dll" Alias "lcEntExplode" (ByVal hEnt As Integer, ByVal bSelect As Integer) As Integer

  Public Declare Function EntOffset Lib "Litecad.dll" Alias "lcEntOffset" (ByVal hEnt As Integer, ByVal Dist As Double) As Integer

  Public Declare Function EntToTop Lib "Litecad.dll" Alias "lcEntToTop" (ByVal hEnt As Integer) As Integer

  Public Declare Function EntToBottom Lib "Litecad.dll" Alias "lcEntToBottom" (ByVal hEnt As Integer) As Integer

  Public Declare Function EntToAbove Lib "Litecad.dll" Alias "lcEntToAbove" (ByVal hEnt As Integer, ByVal hEnt2 As Integer) As Integer

  Public Declare Function EntToUnder Lib "Litecad.dll" Alias "lcEntToUnder" (ByVal hEnt As Integer, ByVal hEnt2 As Integer) As Integer

  Public Declare Function EntGetGrip Lib "Litecad.dll" Alias "lcEntGetGrip" (ByVal hEnt As Integer, ByVal iGrip As Integer, ByRef pX As Double, ByRef pY As Double) As Integer

  Public Declare Function EntPutGrip Lib "Litecad.dll" Alias "lcEntPutGrip" (ByVal hEnt As Integer, ByVal iGrip As Integer, ByVal X As Double, ByVal Y As Double) As Integer

  Public Declare Function EntUpdate Lib "Litecad.dll" Alias "lcEntUpdate" (ByVal hEnt As Integer) As Integer

  Public Declare Function EntCopyBase Lib "Litecad.dll" Alias "lcEntCopyBase" (ByVal hEnt As Integer, ByVal hEntFrom As Integer) As Integer

  Public Declare Function Intersection Lib "Litecad.dll" Alias "lcIntersection" (ByVal hEnt As Integer, ByVal hEnt2 As Integer) As Integer
